tests/NormalTests/paczka1/small_fuzzy/57942584.err
Error in line 1: WTLQD3rwyZ A326 31,3
Error in line 8: xe6 S507 93,0
Error in line 12: A299 S507 83,5
